--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fontes.css">
     <title>Formulario Mentoria</title>
 </head>
 
 <body>
-
+    <div class="page">
+        <header>
+            <h1>Mentoria</h1>
+            <p>Preencha o formulário abaixo para agendar a sua mentoria</p>
+        </header>
+        <form>
+            <div class="caixa-informacoes-pessoais">
+                <fieldset>
+                    <legend>Informações Pessoais</legend>
+                </fieldset>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
