--- a/index.html
+++ b/index.html
@@ -19,13 +19,75 @@
             <p>Preencha o formulário abaixo para agendar a sua mentoria</p>
         </header>
         <form>
-            <div class="caixa-informacoes-pessoais">
+            <fieldset>
+                <legend>Informações Pessoais</legend>
+                <div class="informacao-pessoal">
+                    <div class="nome-sobrenome">
+                        <label for="informacao-nome">Nome</label>
+                        <input type="text" id="informacao-nome">
+                    </div>
+
+                    <div class="nome-sobrenome">
+                        <label for="informacao-sobrenome">Sobrenome</label>
+                        <input type="text" id="informacao-sobrenome">
+                    </div>
+                </div>
+
+                <div class="caixa-input">
+                    <label for="informacao-email">Email <span>(Digite um email valido)</span></label>
+                    <input type="email" id="informacao-email">
+                    <label for="informacao-senha">Senha <span>(mínimo de 6 caracteres)</span></label>
+                    <input type="password" id="informacao-senha">
+                </div>
+
+                <div class="informacao-mentor">
+                    <legend>Informações do mentor</legend>
+                    <label for="informacao-mentor">Nome do seu mentor <span>(só o primeiro nome)</span></label>
+                    <input type="text" id="informacao-mentor">
+                </div>
+
                 <fieldset>
-                    <legend>Informações Pessoais</legend>
+                    <legend>Seus horários disponíveis</legend>
+                    <h3>Primeira Mentoria</h3>
+                    <div class="informacao-horario">
+                        <div class="caixa-data primeiro">
+                            <label for="informacao-data">Data <span>(DD/MM/AA)</span></label>
+                            <input type="date" id="informacao-data">
+                        </div>
+                        <div class="caixa-data">
+                            <label for="informacao-das">Das</label>
+                            <input type="time" id="informacao-das">
+                        </div>
+                        <div class="caixa-data">
+                            <label for="informacao-ate">Até</label>
+                            <input type="time" id="informacao-ate">
+                        </div>
+                    </div>
+                    <h3>Segunda Mentoria</h3>
+                    <div class="informacao-horario">
+                        <div class="caixa-data primeiro">
+                            <label for="informacao-data">Data <span>(DD/MM/AA)</span></label>
+                            <input type="date" id="informacao-data">
+                        </div>
+                        <div class="caixa-data">
+                            <label for="informacao-das">Das</label>
+                            <input type="time" id="informacao-das">
+                        </div>
+                        <div class="caixa-data">
+                            <label for="informacao-ate">Até</label>
+                            <input type="time" id="informacao-ate">
+                        </div>
+                    </div>
                 </fieldset>
-            </div>
         </form>
+        <footer>
+
+        </footer>
     </div>
+
+
+
+
 </body>
 
 </html>
