Criação do footer

--- a/index.html
+++ b/index.html
@@ -80,14 +80,11 @@
                     </div>
                 </fieldset>
         </form>
-        <footer>
 
-        </footer>
     </div>
-
-
-
-
+    <footer>
+        <input type="submit" value="Salvar" class="input-salvar">
+    </footer>
 </body>
 
 </html>
